<resources>
    <string name="disconnecting">Disconnecting...</string>
    <string name="blocking">Blocking...</string>
    <string name="critical_error">Critical error (your attention is required)</string>
    <string name="foreground_notification_channel_name">VPN tunnel status</string>
    <string name="foreground_notification_channel_description">Shows current VPN tunnel status</string>
    <string name="account_time_notification_channel_name">Account time reminders</string>
    <string name="account_time_notification_channel_description">Shows reminders when the account time is about to expire</string>
    <string name="connecting_to_daemon">Connecting to Mullvad system service...</string>
    <string name="login_title">Login</string>
    <string name="login_description">Enter your account number</string>
    <string name="logging_in_title">Logging in...</string>
    <string name="logging_in_description">Checking account number</string>
    <string name="logged_in_title">Logged in</string>
    <string name="logged_in_description">Valid account number</string>
    <string name="login_fail_title">Login failed</string>
    <string name="login_fail_description">Invalid account number</string>
    <string name="dont_have_an_account">Don’t have an account number?</string>
    <string name="create_account">Create account</string>
    <string name="create_new_account_warning_paragraph1">You already have a saved account number, by creating a new account the saved account number will be removed from this device. This cannot be undone.</string>
    <string name="create_new_account_warning_paragraph2">Do you want to create a new account?</string>
    <string name="creating_new_account">Creating account...</string>
    <string name="failed_to_create_account">Failed to create account</string>
    <string name="congrats">Congrats!</string>
    <string name="here_is_your_account_number">Here’s your account number. Save it!</string>
    <string name="pay_to_start_using">To start using the app, you first need to add time to your account.</string>
    <string name="buy_credit">Buy credit</string>
    <string name="redeem_voucher">Redeem voucher</string>
    <string name="enter_voucher_code">Enter voucher code</string>
    <string name="redeem">Redeem</string>
    <string name="invalid_voucher">Voucher code is invalid.</string>
    <string name="voucher_already_used">Voucher code has already been used.</string>
    <string name="voucher_is_account_number">It looks like you’ve entered an account number instead of a voucher code. If you would like to change the active account, please log out first.</string>
    <string name="error_occurred">An error occurred.</string>
    <string name="settings">Settings</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="settings_account">Account</string>
    <string name="less_than_a_day_left">less than a day left</string>
    <string name="account_credit_expires_in_a_few_minutes">Account credit expires in a few minutes</string>
    <string name="account_credit_has_expired">You have no more VPN time left on this account.</string>
    <string name="out_of_time">Out of time</string>
    <string name="add_time_to_account">Either buy credit on our website or redeem a voucher.</string>
    <string name="settings_vpn">VPN settings</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="faqs_and_guides">FAQs &amp; Guides</string>
    <string name="privacy_policy_label">Privacy policy</string>
    <string name="account_number">Account number</string>
    <string name="device_name">Device name</string>
    <string name="apply">Apply</string>
    <string name="ownership">Ownership</string>
    <string name="providers">Providers</string>
    <string name="any">Any</string>
    <string name="owned">Owned</string>
    <string name="rented">Rented</string>
    <string name="number_of_providers">Providers: %d</string>
    <string name="mullvad_owned_only">Mullvad owned only</string>
    <string name="all_providers">All providers</string>
    <string name="rented_only">Rented only</string>
    <string name="device_name_info_first_paragraph">This is the name assigned to the device. Each device logged in on a Mullvad account gets a unique name that helps you identify it when you manage your devices in the app or on the website.</string>
    <string name="device_name_info_second_paragraph">You can have up to 5 devices logged in on one Mullvad account.</string>
    <string name="device_name_info_third_paragraph">If you log out, the device and the device name is removed. When you log back in again, the device will get a new name.</string>
    <string name="copied_mullvad_account_number">Copied Mullvad account number to clipboard</string>
    <string name="paid_until">Paid until</string>
    <string name="log_out">Log out</string>
    <string name="local_network_sharing">Local network sharing</string>
    <string name="auto_connect_and_lockdown_mode">Auto-connect &amp; Lockdown mode</string>
    <string name="auto_connect_and_lockdown_mode_footer">Makes sure the device is always on the VPN tunnel.</string>
    <string name="go_to_vpn_settings">Go to VPN settings</string>
    <string name="auto_connect_carousel_first_slide_top_text">The Auto-connect and Lockdown mode settings can be found in the Android system settings, follow this guide to enable one or both.</string>
    <string name="auto_connect_carousel_first_slide_bottom_text">1. After clicking on the \"Go to VPN settings\" button below, click on the cogwheel next to the \"Mullvad VPN\" name.</string>
    <string name="auto_connect_carousel_second_slide_top_text">Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart.</string>
    <string name="auto_connect_carousel_second_slide_bottom_text">2. To enable Auto-connect, click on the toggle next to \"Always-on VPN\".</string>
    <string name="auto_connect_carousel_third_slide_top_text">The Lockdown mode is called \"Block connections without VPN\" in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about</string>
    <string name="auto_connect_carousel_third_slide_top_text_website_link">here</string>
    <string name="auto_connect_carousel_third_slide_bottom_text">
        <![CDATA[3. To enable Lockdown mode, click on the toggle next to \"Block connections without VPN\".<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>]]>
    </string>
    <string name="wireguard_mtu">WireGuard MTU</string>
    <string name="wireguard_mtu_footer">Set WireGuard MTU value. Valid range: %1$d - %2$d.</string>
    <string name="hint_default">Default</string>
    <string name="problem_report_description">To help you more effectively, your app’s log file will be attached to this message. Your data will remain secure and private, as it is anonymised before being sent over an encrypted channel.</string>
    <string name="user_email_hint">Your email (optional)</string>
    <string name="user_message_hint">To assist you better, please write in English or Swedish and include which country you are connecting from.</string>
    <string name="view_logs">View app logs</string>
    <string name="send">Send</string>
    <string name="sending">Sending...</string>
    <string name="sent">Sent</string>
    <string name="failed_to_send">Failed to send</string>
    <string name="confirm_no_email">You are about to send the problem report without a way for us to get back to you. If you want an answer to your report you will have to enter an email address.</string>
    <string name="send_anyway">Send anyway</string>
    <string name="back">Back</string>
    <string name="sent_thanks">Thanks!</string>
    <string name="we_will_look_into_this">We will look into this.</string>
    <string name="sent_contact">If needed we will contact you at %1$s</string>
    <string name="failed_to_send_details">If you exit the form and try again later, the information you already entered will still be here.</string>
    <string name="edit_message">Edit message</string>
    <string name="try_again">Try again</string>
    <string name="blocked_connection">BLOCKED CONNECTION</string>
    <string name="error_state">FAILED TO CONNECT</string>
    <string name="connected">Connected</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="reconnect">Reconnect</string>
    <string name="dismiss">Dismiss</string>
    <string name="switch_location">Switch location</string>
    <string name="shortcut_connect">Connect</string>
    <string name="shortcut_connect_long">Connect VPN</string>
    <string name="shortcut_disconnect">Disconnect</string>
    <string name="shortcut_disconnect_long">Disconnect VPN</string>
    <string name="shortcut_disabled_message">This shortcut is currently unavailable</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="blocking_internet">Blocking internet</string>
    <string name="blocking_internet_device_offline">Blocking internet (device offline)</string>
    <string name="invalid_dns_servers">Custom DNS server addresses %1$s are invalid</string>
    <string name="failed_to_block_internet">Unable to block all network traffic. Please troubleshoot or send a problem report.</string>
    <string name="auth_failed">Unable to authenticate account. Please send a problem report.</string>
    <string name="ipv6_unavailable">Could not configure IPv6. Disable it in the app or enable it on your device.</string>
    <string name="set_firewall_policy_error">Unable to apply firewall rules. Please troubleshoot or send a problem report.</string>
    <string name="set_dns_error">Unable to set system DNS server. Please send a problem report.</string>
    <string name="start_tunnel_error">Unable to start tunnel connection. Please send a problem report.</string>
    <string name="vpn_permission_denied_error">VPN permission was denied or another app has \"Always-on VPN\" enabled</string>
    <string name="no_matching_relay">No servers match your settings, try changing server or other settings.</string>
    <string name="no_wireguard_key">Valid WireGuard key is missing. Manage keys under Advanced settings.</string>
    <string name="custom_dns_hint">Enter IP</string>
    <string name="custom_tunnel_host_resolution_error">Unable to resolve host of custom tunnel. Try changing your settings.</string>
    <string name="is_offline">Your device is offline. The tunnel will automatically connect once your device is back online.</string>
    <string name="unsupported_version">UNSUPPORTED VERSION</string>
    <string name="unsupported_version_description">Your privacy might be at risk with this unsupported app version. Please update now.</string>
    <string name="account_credit_expires_soon">Account credit expires soon</string>
    <string name="select_location">Select location</string>
    <string name="filter">Filter</string>
    <string name="split_tunneling_description">Lets you select apps that should access the Internet directly without going through the VPN tunnel.</string>
    <string name="split_tunneling_description_warning">Attention: If \"Block connections without VPN\" is enabled, split apps will not have Internet. Always keep in mind that split tunneling is a privacy risk.</string>
    <string name="enable">Enable</string>
    <string name="enable_custom_dns">Use custom DNS server</string>
    <string name="add_a_server">Add a server</string>
    <string name="custom_dns_footer">Enable to add at least one DNS server.</string>
</resources>